@@ -351,7 +351,9 @@ def frontend_edit(request, object_id=None, api=False):
             reputationctx_objs.append(reputationctx_f.save(commit=False))
 
         listener_objs = []
-        if form.data.get('mode') not in ["filebeat"] and form.data.get('listening_mode') not in ("file", "api", "kafka", "redis"):
+        if form.data.get('mode') in ("http", "tcp") \
+        or form.data.get('mode') == "log" and form.data.get('listening_mode') in ("tcp", "udp", "tcp,udp", "relp") \
+        or form.data.get('mode') == "filebeat" and form.data.get('filebeat_listening_mode') in ("tcp", "udp"):
 
             # At least one Listener is required if Frontend enabled, except for listener of type "File", and "API"
             if form.data.get('enabled') and not listener_ids:
@@ -374,40 +376,8 @@ def frontend_edit(request, object_id=None, api=False):
 
                 if not listener_f.is_valid():
                     form.add_error("listeners", listener_f.errors.as_json() if api else [error for error_list in listener_f.errors.as_data().values() for error in error_list])
-
-                    continue
-                listener_form_list.append(listener_f)
-                listener_obj = listener_f.save(commit=False)
-                listener_objs.append(listener_obj)
-
-                """ For each listener, get node """
-                for nic in listener_obj.network_address.nic.all().only('node'):
-                    if nic.node:
-                        if not node_listeners.get(nic.node):
-                            node_listeners[nic.node] = list()
-                        node_listeners[nic.node].append(listener_obj)
-
-        elif form.data.get('mode') == "filebeat" and form.data.get('filebeat_listening_mode') not in ("file", "api"):
-            # At least one Listener is required if Frontend enabled, except for listener of type "File", and "API"
-            if form.data.get('enabled') and not listener_ids:
-                form.add_error(None, "At least one listener is required if frontend is enabled.")
-
-            """ For each listener in list """
-            for listener in listener_ids:
-                """ If id is given, retrieve object from mongo """
-                try:
-                    instance_l = Listener.objects.get(pk=listener['id']) if listener.get('id') else None
-                except ObjectDoesNotExist:
-                    form.add_error("listeners", "Listener with id {} not found.".format(listener['id']))
                     continue
 
-                """ And instantiate form with the object, or None """
-                listener_f = ListenerForm(listener, instance=instance_l)
-                if not listener_f.is_valid():
-                    if api:
-                        form.add_error("listeners", listener_f.errors.as_json() if api else
-                                                    listener_f.errors.as_ul())
-                    continue
                 listener_form_list.append(listener_f)
                 listener_obj = listener_f.save(commit=False)
                 listener_objs.append(listener_obj)
