@@ -5,6 +5,11 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 
+## [Unreleased]
+### Fixed
+- [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
+
+
 ## [2.12.0]
 ### Added
 - [API_PARSER] [VECTRA] New parser Vectra
